--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2555,6 +2555,9 @@ input, select, textarea {
 
 	.work-item {
 		margin: 0 0 2em 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 		.work-item .image {
@@ -2566,7 +2569,8 @@ input, select, textarea {
 			margin: 0 0 0.5em 0;
 		}
 
-		.work-item p {
+		.work-item p,
+		.work-item a {
 			font-size: 0.8em;
 			line-height: 1.5em;
 			margin: 0;
