change background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2691,6 +2691,7 @@ input, select, textarea {
 		max-width: 54em;
 		padding: 8em 4em 4em 4em;
 		width: calc(100% - 35%);
+		background-color: #FFFDD0;
 	}
 
 		#main > section {
